fixed overlapping of elements

--- a/src/app/background/background.component.css
+++ b/src/app/background/background.component.css
@@ -7,8 +7,18 @@
     z-index: -1;
 }
 
+.spacer-header {
+    aspect-ratio: 960/100;
+    width: 100%;
+    /* height: 50%; */
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    z-index: 1000;
+}
+
 .background-top {
-    background-image: url('./header-waves.svg');
+    background-image: url('./header-waves-thin.svg');
 }
 
 .background-bottom {
