--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,7 @@ h1 {
     background-color: rgb(0, 0, 0, .2);
     border-color: #2f2f2f;
     box-shadow: 0px 1px 10px 0px rgba(0,0,0,.7);
+    
   }
 
   .nav-link {
@@ -52,8 +53,14 @@ h1 {
     border-color: #6b0202 !important;
   }
 
-  .center-object {
-    padding-top: 150px;
+  .page-footer{
+    position:fixed;
+    bottom:0px;
+    width:100%;
+    }
+
+  .page-center {
+    bottom: 1000px;
   }
 
 
